--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,13 +1,16 @@
 @import "tailwindcss";
+
+
 @font-face {
 	font-family: 'ferry';
-	src: url('../fonts/ferry_black.otf') format('opentype');
-	/* font-weight: normal;
-	font-style: normal; */
+	src        : url('../fonts/ferry_black.otf') format('opentype');
+	font-weight: normal;
+	font-style : normal;
 }
+
 @font-face {
 	font-family: 'inter';
-	src: url('../fonts/inter.ttf') format('truetype');
-	/* font-weight: normal;
-	font-style: normal; */
+	src        : url('../fonts/inter.ttf') format('truetype');
+	font-weight: normal;
+	font-style : normal;
 }
