--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -4,13 +4,14 @@
 @font-face {
 	font-family: 'ferry';
 	src        : url('../fonts/ferry_black.otf') format('opentype');
-	font-weight: normal;
-	font-style : normal;
+	font-weight: 900;
+	font-style  : normal;
 }
 
 @font-face {
 	font-family: 'inter';
 	src        : url('../fonts/inter.ttf') format('truetype');
-	font-weight: normal;
-	font-style : normal;
+	font-weight: 400;
+	font-style  : normal;
 }
+
