Mainpage ready of 90 percent

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,17 +1,19 @@
 @import "tailwindcss";
 
+.default_text {
+	@apply leading-none tracking-[0.01em];
+}
 
 @font-face {
 	font-family: 'ferry';
 	src        : url('../fonts/ferry_black.otf') format('opentype');
 	font-weight: 900;
-	font-style  : normal;
+	font-style : normal;
 }
 
 @font-face {
 	font-family: 'inter';
 	src        : url('../fonts/inter.ttf') format('truetype');
 	font-weight: 400;
-	font-style  : normal;
+	font-style : normal;
 }
-
