--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,7 +1,7 @@
 /* Reset and base styles  */
 * {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   border: none;
 }
 
@@ -81,7 +81,7 @@ input::-ms-clear {
 }
 
 button,
-input[type="submit"] {
+input[type='submit'] {
   display: inline-block;
   box-shadow: none;
   background-color: transparent;
@@ -109,6 +109,6 @@ legend {
   display: block;
 }
 
-input[type="file"] {
+input[type='file'] {
   max-width: 100%;
 }
