--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,31 +1,35 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 html,
 body {
-	margin : 0;
-	padding: 0;
-	height : 100%
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 .default_text {
-	@apply leading-none tracking-[0.01em];
+  @apply leading-none tracking-[0.01em];
 }
 
 @font-face {
-	font-family: "ferry";
-	src        : url("../fonts/ferry_black.otf") format("opentype");
-	font-weight: 900;
-	font-style : normal;
+  font-family: 'ferry';
+  src: url('../fonts/ferry_black.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: "inter";
-	src        : url("../fonts/inter.ttf") format("truetype");
-	font-weight: 400;
-	font-style : normal;
+  font-family: 'inter';
+  src: url('../fonts/inter.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
